citizensfla-theme/src/main/webapp/css/custom.css
/* ... */
@media screen and (max-width: 991px) {
	.site-navigation {
		position: relative;
		min-height: 40px;
		float: right;
		margin-top: -65px;
		z-index: 1;
	}	
	.site-navigation ul {
		width: 190px;
		padding: 1px 0;
		position: absolute;
		height: auto !important;
		top: 0;
		left: 0;
		border: solid 1px #aaa;
		background: #fff url(@theme_image_path@/custom/icon-menu.png) no-repeat 15px 11px;
		@include border-radius(5px);
		@include box-shadow(1px 2px 6px 0px rgba(0, 0, 0, 0.2));
		z-index: 10;
	}
	.site-navigation li {
		display: none;
		margin: 0;
		float: none !important;
		margin: 0px 0px 0px 37px !important;
		.dropdown-menu.child-menu, .icon-caret-down {
			display: none;
		}
	}
	.site-navigation .selected {
		display: block;
	}
	.site-navigation a {
		display: block;
		padding: 1px 5px 4px 2px !important;
		text-align: left;
		font-family: 'Avenir35-Light' !important;
		font-size: 18px !important;
		font-weight: normal !important;
		margin: 0 !important;
		line-height: 28px !important;
		&:hover, &:focus {
			text-decoration: none !important;
			border-bottom: 0 !important;
		}
	}
	.site-navigation .current a {
		background: none;
		color: #666;
	}
	.site-navigation ul:hover li {
		display: block;
		margin: 0 0 5px;
	}
}

